feat: customer_regist_source, holiday, and payment_method service DONE || Data Master Shall be finished
